--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,1 +1,30 @@
-<p>login works!</p>
+<div class="container">
+    <mat-card >
+       <mat-card-title>
+            <mat-card-title>Login</mat-card-title>
+        </mat-card-title>
+        <mat-card-content>
+            <form [formGroup]="LoginForm">
+                <mat-form-field appearance="outline" class="full-width">
+                    <mat-label>Email</mat-label>
+                    <input matInput placeholder="Email" formControlName="email" required>
+                    <mat-error *ngIf="LoginForm.get('email')?.invalid && LoginForm.get('email')?.touched">
+                        Valid email is required
+                    </mat-error>
+                </mat-form-field>
+
+                <mat-form-field appearance="outline" class="full-width">
+                    <input matInput type="{{hidepassword?'password':'text'}}" placeholder="password" formControlName="password" required>
+                    <mat-label>Password</mat-label>
+                    <button mat-icon-button matSuffix (click)="togglePasswordVisibility()">
+                        <mat-icon>{{hidepassword ? 'visibility_off' : 'visibility'}}</mat-icon>
+                    </button>
+                    <mat-error *ngIf="LoginForm.get('password')?.invalid && LoginForm.get('password')?.touched">
+                        Password is required
+                    </mat-error>
+                </mat-form-field>
+                <button mat-raised-button color="primary" type="submit" [disabled]="LoginForm.invalid" class="signup-button" (click)="onSubmit()">Log In</button>
+            </form>
+        </mat-card-content>
+    </mat-card>
+</div>
